--- a/RestockList/View/Base.lproj/Main.storyboard
+++ b/RestockList/View/Base.lproj/Main.storyboard
@@ -438,11 +438,16 @@
                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LYZ-W5-R5l">
-                                            <rect key="frame" x="-56" y="0.0" width="240" height="128"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LYZ-W5-R5l">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         </imageView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="LYZ-W5-R5l" firstAttribute="leading" secondItem="88D-Fl-ekP" secondAttribute="leading" id="2Ih-X5-XHi"/>
+                                        <constraint firstAttribute="bottom" secondItem="LYZ-W5-R5l" secondAttribute="bottom" id="F80-Ns-A7y"/>
+                                        <constraint firstItem="LYZ-W5-R5l" firstAttribute="top" secondItem="88D-Fl-ekP" secondAttribute="top" id="Jmy-Bi-G6q"/>
+                                        <constraint firstAttribute="trailing" secondItem="LYZ-W5-R5l" secondAttribute="trailing" id="ygn-hQ-mh7"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <connections>
@@ -462,7 +467,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F4R-gv-kil" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2864" y="139"/>
+            <point key="canvasLocation" x="2862.3188405797105" y="138.61607142857142"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="InE-IH-YOL">
@@ -1204,15 +1209,15 @@
                                         <rect key="frame" x="20" y="64" width="374" height="778"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ウィジェットを追加して一目で確認！" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wvV-FX-KF3">
-                                                <rect key="frame" x="20" y="612" width="334" height="17"/>
+                                                <rect key="frame" x="20" y="567.5" width="334" height="17"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                 <color key="textColor" name="FontColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tutorial5" translatesAutoresizingMaskIntoConstraints="NO" id="HPa-4W-5dN">
-                                                <rect key="frame" x="20" y="86" width="334" height="506"/>
+                                                <rect key="frame" x="20" y="210.5" width="334" height="357"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="HPa-4W-5dN" secondAttribute="height" multiplier="167:253" id="7gB-ya-Sxe"/>
+                                                    <constraint firstAttribute="width" secondItem="HPa-4W-5dN" secondAttribute="height" multiplier="334:357" id="arw-Kb-2PB"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.forward" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="trU-nT-TYr">
@@ -1228,10 +1233,10 @@
                                         <constraints>
                                             <constraint firstItem="wvV-FX-KF3" firstAttribute="leading" secondItem="RH5-65-Xq3" secondAttribute="leading" constant="20" id="1Ug-HT-jyJ"/>
                                             <constraint firstItem="trU-nT-TYr" firstAttribute="top" secondItem="RH5-65-Xq3" secondAttribute="top" constant="20" id="7lF-fm-g2Z"/>
-                                            <constraint firstItem="HPa-4W-5dN" firstAttribute="centerY" secondItem="RH5-65-Xq3" secondAttribute="centerY" constant="-50" id="Fmy-ze-9Ud"/>
+                                            <constraint firstItem="HPa-4W-5dN" firstAttribute="centerY" secondItem="RH5-65-Xq3" secondAttribute="centerY" id="Fmy-ze-9Ud"/>
                                             <constraint firstAttribute="trailing" secondItem="wvV-FX-KF3" secondAttribute="trailing" constant="20" id="NBF-nQ-YKm"/>
                                             <constraint firstItem="HPa-4W-5dN" firstAttribute="leading" secondItem="RH5-65-Xq3" secondAttribute="leading" constant="20" id="TdF-eX-JFD"/>
-                                            <constraint firstItem="wvV-FX-KF3" firstAttribute="top" secondItem="HPa-4W-5dN" secondAttribute="bottom" constant="20" id="Vfp-gQ-cre"/>
+                                            <constraint firstItem="wvV-FX-KF3" firstAttribute="top" secondItem="HPa-4W-5dN" secondAttribute="bottom" id="Vfp-gQ-cre"/>
                                             <constraint firstAttribute="trailing" secondItem="HPa-4W-5dN" secondAttribute="trailing" constant="20" id="hPY-mX-uTH"/>
                                             <constraint firstAttribute="trailing" secondItem="trU-nT-TYr" secondAttribute="trailing" constant="20" id="qAz-oQ-eKe"/>
                                         </constraints>
@@ -1435,28 +1440,32 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ptk-K1-utD">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1089.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rFS-tx-ell">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="1089.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="テーマカラー解放" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0o-Pr-xHU">
-                                                        <rect key="frame" x="60" y="282" width="164" height="24"/>
+                                                        <rect key="frame" x="60" y="598" width="164" height="24"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" name="FontColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons" translatesAutoresizingMaskIntoConstraints="NO" id="nMv-Mu-uYT">
-                                                        <rect key="frame" x="20" y="70" width="374" height="189"/>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons" translatesAutoresizingMaskIntoConstraints="NO" id="nMv-Mu-uYT">
+                                                        <rect key="frame" x="20" y="386" width="374" height="189"/>
                                                         <constraints>
+                                                            <constraint firstAttribute="width" secondItem="nMv-Mu-uYT" secondAttribute="height" multiplier="374:189" id="MqB-Zd-dBR"/>
                                                             <constraint firstAttribute="height" constant="189" id="xuK-DO-Rvc"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Themes" translatesAutoresizingMaskIntoConstraints="NO" id="mYf-gW-UYC">
-                                                        <rect key="frame" x="20" y="329" width="374" height="224.5"/>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Themes" translatesAutoresizingMaskIntoConstraints="NO" id="mYf-gW-UYC">
+                                                        <rect key="frame" x="20" y="645" width="374" height="224"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="mYf-gW-UYC" secondAttribute="height" multiplier="187:112" id="1RY-JJ-GBc"/>
+                                                        </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Proプラン 300円/月" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6A-JG-OP1">
-                                                        <rect key="frame" x="20" y="623.5" width="374" height="17"/>
+                                                        <rect key="frame" x="20" y="939" width="374" height="17"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="17" id="oFr-JJ-fXM"/>
                                                         </constraints>
@@ -1465,7 +1474,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7b-LR-RJZ">
-                                                        <rect key="frame" x="20" y="660.5" width="374" height="70"/>
+                                                        <rect key="frame" x="20" y="976" width="374" height="70"/>
                                                         <color key="backgroundColor" name="AccentColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="70" id="vdH-Vr-VLH"/>
@@ -1480,10 +1489,10 @@
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tRZ-L0-SCH">
-                                                        <rect key="frame" x="20" y="20" width="30" height="30"/>
+                                                        <rect key="frame" x="20" y="20" width="30" height="346"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bitmap.png" translatesAutoresizingMaskIntoConstraints="NO" id="nCa-UR-a70">
-                                                                <rect key="frame" x="8" y="8" width="14" height="14"/>
+                                                                <rect key="frame" x="8" y="8" width="14" height="330"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" name="AccentColor1"/>
@@ -1495,13 +1504,13 @@
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アイコン解放" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6K-DM-Z8e">
-                                                        <rect key="frame" x="60" y="23" width="123" height="24"/>
+                                                        <rect key="frame" x="60" y="23" width="123" height="340"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" name="FontColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xdg-Xt-Ihn">
-                                                        <rect key="frame" x="20" y="279" width="30" height="30"/>
+                                                        <rect key="frame" x="20" y="595" width="30" height="30"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hammer.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="X0c-uT-t1S">
                                                                 <rect key="frame" x="5" y="3.5" width="20" height="22.5"/>
@@ -1516,7 +1525,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r0O-O9-uT8">
-                                                        <rect key="frame" x="20" y="573.5" width="30" height="30"/>
+                                                        <rect key="frame" x="20" y="889" width="30" height="30"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zaf-C3-EAc">
                                                                 <rect key="frame" x="5" y="5.5" width="20" height="18.5"/>
@@ -1531,7 +1540,7 @@
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アイテム数：20個 → 無制限" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0k-tH-1MW">
-                                                        <rect key="frame" x="60" y="576.5" width="257" height="24"/>
+                                                        <rect key="frame" x="60" y="892" width="257" height="24"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="257" id="caU-ya-0SS"/>
                                                         </constraints>
@@ -1631,7 +1640,7 @@
         <image name="Tutorial2" width="828" height="438"/>
         <image name="Tutorial3" width="828" height="250"/>
         <image name="Tutorial4" width="414" height="126"/>
-        <image name="Tutorial5" width="828" height="1252"/>
+        <image name="Tutorial5" width="414" height="441"/>
         <image name="arrow.down.circle.fill" catalog="system" width="128" height="121"/>
         <image name="arrow.forward" catalog="system" width="128" height="98"/>
         <image name="bell" catalog="system" width="128" height="124"/>
