--- a/RestockList/Resources/SettingView.storyboard
+++ b/RestockList/Resources/SettingView.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bbS-dV-ODG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bbS-dV-ODG">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -73,7 +74,7 @@
                             <tableViewSection headerTitle="PRO" id="btn-mc-Bad">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="LBm-A2-qpN">
-                                        <rect key="frame" x="20" y="49.5" width="374" height="46.5"/>
+                                        <rect key="frame" x="20" y="55.5" width="374" height="46.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LBm-A2-qpN" id="Ls8-5V-YIr">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="46.5"/>
@@ -113,7 +114,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="let-Ho-RhE">
-                                        <rect key="frame" x="20" y="96" width="374" height="46.5"/>
+                                        <rect key="frame" x="20" y="102" width="374" height="46.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="let-Ho-RhE" id="DK9-Kn-C5D">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="46.5"/>
@@ -153,7 +154,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="46" id="uxX-2b-DzH">
-                                        <rect key="frame" x="20" y="142.5" width="374" height="46"/>
+                                        <rect key="frame" x="20" y="148.5" width="374" height="46"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uxX-2b-DzH" id="Cc1-3V-LWF">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="46"/>
@@ -198,7 +199,7 @@
                             <tableViewSection headerTitle="アプリケーション" footerTitle="©︎ 2022 Musa Yazuju" id="o7p-an-e2E">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="5xM-JU-Ngy">
-                                        <rect key="frame" x="20" y="238" width="374" height="46.5"/>
+                                        <rect key="frame" x="20" y="250" width="374" height="46.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5xM-JU-Ngy" id="k9W-8D-KRa">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="46.5"/>
@@ -238,7 +239,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="yWe-pN-bTZ">
-                                        <rect key="frame" x="20" y="284.5" width="374" height="46.5"/>
+                                        <rect key="frame" x="20" y="296.5" width="374" height="46.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yWe-pN-bTZ" id="qDd-eQ-TRx">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="46.5"/>
@@ -278,7 +279,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" tag="1" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="3ps-He-kUv">
-                                        <rect key="frame" x="20" y="331" width="374" height="46.5"/>
+                                        <rect key="frame" x="20" y="343" width="374" height="46.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3ps-He-kUv" id="Np4-UQ-IPo">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="46.5"/>
@@ -294,7 +295,7 @@
                                                     <rect key="frame" x="20" y="8" width="30" height="30.5"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BiS-Wf-hK7">
-                                                            <rect key="frame" x="5" y="4" width="20" height="21.5"/>
+                                                            <rect key="frame" x="5" y="2.5" width="20" height="23"/>
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </imageView>
                                                     </subviews>
@@ -318,7 +319,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" tag="3" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="M20-tf-tfB">
-                                        <rect key="frame" x="20" y="377.5" width="374" height="46.5"/>
+                                        <rect key="frame" x="20" y="389.5" width="374" height="46.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="M20-tf-tfB" id="k29-Zh-8ln">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="46.5"/>
@@ -466,6 +467,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="7EJ-GL-MCh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Ybm-95-Pdd" secondAttribute="trailing" id="5O1-mj-A4L"/>
@@ -489,19 +491,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="設定された日数以下の時通知されます。" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ZO-nl-S6w">
-                                <rect key="frame" x="20" y="135" width="374" height="17"/>
+                                <rect key="frame" x="20" y="142.5" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" name="FontColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アイテムの残り日数が" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJT-ny-cXk">
-                                <rect key="frame" x="20" y="108" width="374" height="17"/>
+                                <rect key="frame" x="20" y="112" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" name="FontColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GNu-Lf-Qvu">
-                                <rect key="frame" x="20" y="408" width="374" height="70"/>
+                                <rect key="frame" x="20" y="419" width="374" height="70"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="9JN-cm-wdP"/>
@@ -516,13 +518,13 @@
                                 </connections>
                             </button>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NzA-37-HA0">
-                                <rect key="frame" x="157" y="172" width="100" height="216"/>
+                                <rect key="frame" x="157" y="183" width="100" height="216"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="ako-Sb-5gY"/>
                                 </constraints>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQ5-jd-jgB">
-                                <rect key="frame" x="267" y="272" width="14.5" height="17"/>
+                                <rect key="frame" x="267" y="283" width="17.5" height="20.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" name="FontColor"/>
                                 <nil key="highlightedColor"/>
@@ -567,7 +569,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V1G-EN-hBR">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="92" width="414" height="804"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="owB-g9-sTO" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="955"/>
@@ -597,7 +599,7 @@
                                                     <constraint firstAttribute="height" constant="70" id="zPr-rO-048"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Proをアンロック - 250円">
+                                                <buttonConfiguration key="configuration" style="plain" title="Proをアンロック - 300円">
                                                     <fontDescription key="titleFontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
@@ -776,7 +778,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bbS-dV-ODG" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ta1-7Y-ZPF">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" name="AccentColor1"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -815,14 +817,14 @@
         <image name="Icons" width="750" height="375"/>
         <image name="Items" width="404" height="198"/>
         <image name="Themes" width="2447" height="1380"/>
-        <image name="bell" catalog="system" width="128" height="124"/>
-        <image name="envelope" catalog="system" width="128" height="93"/>
-        <image name="gift" catalog="system" width="128" height="124"/>
+        <image name="bell" catalog="system" width="125" height="128"/>
+        <image name="envelope" catalog="system" width="128" height="85"/>
+        <image name="gift" catalog="system" width="128" height="125"/>
         <image name="hammer.fill" catalog="system" width="128" height="117"/>
-        <image name="lock.fill" catalog="system" width="128" height="128"/>
-        <image name="paintbrush.pointed" catalog="system" width="128" height="116"/>
-        <image name="questionmark" catalog="system" width="96" height="128"/>
-        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <image name="lock.fill" catalog="system" width="125" height="128"/>
+        <image name="paintbrush.pointed" catalog="system" width="128" height="118"/>
+        <image name="questionmark" catalog="system" width="94" height="128"/>
+        <image name="square.and.arrow.up" catalog="system" width="108" height="128"/>
         <namedColor name="AccentColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </namedColor>
@@ -830,7 +832,7 @@
             <color red="0.082352941176470587" green="0.70980392156862748" blue="0.3843137254901961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor2">
-            <color red="0.0" green="0.45882352941176469" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.45899999141693115" blue="0.71799999475479126" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor3">
             <color red="0.25900000333786011" green="0.27099999785423279" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -839,7 +841,7 @@
             <color red="0.77647058823529413" green="0.0" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor5">
-            <color red="0.86699998378753662" green="0.13699999451637268" blue="0.17299999296665192" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.8666666666666667" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor6">
             <color red="0.85490196078431369" green="0.32156862745098042" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
